Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjObjBooleanRetBoolean.quorum
class Main
    action Main
        Yoda<Boolean, Boolean, boolean> yoda
        boolean y = yoda:useForce(true, true)
        output "passed"
     end
end
