Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjPriIntObjRetBooleanFail.quorum
class Main
    action Main
        Yoda<Boolean, Boolean, Integer> yoda
        boolean y = yoda(true, true, true)
     end
end
